--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="stylecss">
+        <meta name="viewport" content="width=device-width, initial-scale=1,0">
+        <link rel="stylesheet" href="style.css">
         <title> Instagram </title>
     </head>
     <body>
@@ -13,22 +14,22 @@
            <div class="instagram-contine">
                <div class="group">
                    <img src="imagens/instagram-nome.png" class="logo-instagram" alt="logo do instagram">
-                   <div class="proile-foto">
+                   <div class="my-profile">
                        <img src="imagens/my-profile.jpg" alt= "meu perfil"> 
                    </div>
-                   <a href="#" class="instagran-login"> Continue como memillyan</a>
+                   <a href="#" class="instagram-login"> Continue como memillyan</a>
                    <a href="#" class="instagram-logout"> Remover conta </a>
                </div>
                <div class="group">
-                   <p class="not-account"> não é memillyan ? </p>
-                   <p class="notaccount">
+                   <p class="not-account"> Não é memillyan ? </p>
+                   <p class="not-account">
                        <spam class="link-blue"> Alterar contas</spam>
                        ou 
                        <spam class="link-blue">Inscreva-se</spam>
                    </p>
                 </div>
                 <div class="gettoapp">
-                    <p class="getapp">Baixe o app</p>
+                    <p class="get-app">Baixe o app</p>
                     <div class="download">
                         <a href="#" class="app-download"></a>
                         <a href="#" class="app-download"></a>
